# Rag-conversation-model

./: .env.example  .gitignore  ARCHITECTURE.md  PHASES_3_4.md  PROJECT_SUMMARY.md  README.md  TAVILY_WEATHER_SETUP.md  TESTING.md  debug_weather.py  multi_agent_plan_batch1.md  pyproject.toml  pytest.ini  test_results.txt
.claude/: settings.json
.streamlit/: config.toml
app/: main.py  style.py
app/components/: agent_trace.py  grounding_badge.py  hitl_modal.py  provenance_card.py  weather_card.py
app/pages/: 1_Chat.py  2_Employees.py  3_Traces.py  4_HITL_Queue.py  5_Config.py
aria_agents/: employee_intelligence.py  grounding_critic.py  location_resolver.py  orchestrator.py  rag_retrieval.py  weather_news.py
config/: model_config.py  schemas.py
db/: models.py  seed.py  session_store.py  vector_store.py
tests/: __init__.py  conftest.py
tests/test_config/: __init__.py  test_schemas.py
tests/test_tools/: __init__.py  test_location_matcher.py  test_sql_query.py  test_tavily_news.py  test_tavily_weather.py
tools/: location_matcher.py  sql_query.py  tavily_news.py  tavily_weather.py  vector_store.py
