[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aria"
version = "0.1.0"
description = "ARIA — Agentic Retrieval & Intelligence Architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.46.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "faker>=26.0.0",
    "pydantic>=2.0.0",
    "plotly>=5.0.0",
    "httpx>=0.27.0",
    "tavily-python>=0.5.0",
    "chromadb>=0.5.0",
    "openai>=1.50.0",
    "anthropic>=0.40.0",
    "litellm>=1.50.0",
    "openai-agents>=0.0.14",
    "aiohttp>=3.10.0",
    "pandas>=2.0.0",
    "tenacity>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["aria"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
